# AxiomQuery

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  python-publish.yml
api-reference/: index.html
changelog/: index.html
docs/: api-reference.md  getting-started.md  index.md  philosophy.md
docs/guide/: aggregation.md  async.md  domain-syntax.md  relational-filtering.md  streaming-search.md
examples/: example_asearch.py  example_async.py  example_search.py  example_sync.py  generate_orders_csv.py  load_csv_to_db.py  orders_model.py
examples/orders_data/: orders.csv  orders.db
getting-started/: index.html
guide/aggregation/: index.html
guide/async/: index.html
guide/domain-syntax/: index.html
guide/relational-filtering/: index.html
guide/streaming-search/: index.html
philosophy/: index.html
search/: search_index.json
src/axiom_query/: __init__.py  aggregation.py  aggregation_parser.py  ast.py  compiler.py  compiler_aggregate.py  engine.py  errors.py  operators.py  parser.py  schema.py
tests/: conftest.py  test_asearch.py  test_async.py  test_count.py  test_list.py  test_read_group.py  test_search.py
