[project]
name = "AxiomQuery"
version = "0.1.1"
description = "Specification-based query and aggregation engine for SQLAlchemy 2.0 ORM models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Axiom Contributors" }]
keywords = [
    "sqlalchemy",
    "query",
    "filter",
    "specification",
    "orm",
    "domain",
    "groupby",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["sqlalchemy>=2.0"]

[project.urls]
"Source Code" = "https://github.com/Axiom-Dev-Labs/AxiomQuery"
"Bug Tracker" = "https://github.com/Axiom-Dev-Labs/AxiomQuery/issues"
"Changelog" = "https://github.com/Axiom-Dev-Labs/AxiomQuery/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "aiosqlite>=0.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom_query"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
